--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,17 +4,23 @@
         <h1>Gallery page</h1>
         <a href="/upload" class="btn btn-primary text-center" style="height: min-content">Upload a new picture</a>
     </div>
-    <div class="row">
+    <div class="row" style="gap: 16px">
         <% if (typeof pictures === 'undefined' || pictures.length === 0) { %>
             <div class="col-12">
                 <p>No pictures found :(</p>
             </div>
         <% } else { %>
             <% for (let i = 0; i < pictures.length; i++) { %>
-                <div class="col-4 d-flex border border-1 border-dark" style="flex-direction: column">
-                    <h4><%= pictures[i].title %></h4>
-                    <img src="<%= pictures[i].url%>" alt="image">
-                    <h6>Created at: <%= `${new Date(pictures[i].createdAt).getDate()}/${new Date(pictures[i].createdAt).getMonth()+1}/${new Date(pictures[i].createdAt).getFullYear()}` %></h6>
+                <div class="card col-3" style="width: 18rem;">
+                    <div style="height: 300px; object-fit: cover; object-position: center center">
+                        <img src="<%= pictures[i].url %>" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body" style="background: white">
+                        <h5 class="card-title"><%= pictures[i].title %></h5>
+                        <p class="card-text">Created
+                            at: <%= `${new Date(pictures[i].createdAt).getDate()}/${new Date(pictures[i].createdAt).getMonth() + 1}/${new Date(pictures[i].createdAt).getFullYear()}` %></p>
+                        <a href="/delete/photo/<%= pictures[i].id %>" class="btn btn-danger">Delete photo</a>
+                    </div>
                 </div>
         <% }} %>
     </div>
